url fileserver fixes (#309)